--- a/panduan.html
+++ b/panduan.html
@@ -247,8 +247,8 @@
     <p>
       1️⃣ Pastikan nomor HP masih aktif.<br>
       2️⃣ Unduh aplikasi baru melalui <b>Google Play Store</b>.<br>
-      3️⃣ Login menggunakan nomor dan PIN lama Anda.<br>
-      4️⃣ Jika diminta, lakukan reset PIN agar akun Anda aktif di sistem baru.<br>
+      3️⃣ Login menggunakan nomor Anda.<br>
+      4️⃣ Lakukan reset PIN agar akun Anda aktif di sistem baru.<br>
       5️⃣ Semua saldo dan riwayat transaksi akan otomatis tersinkronisasi.
     </p>
 
