--- a/panduan.html
+++ b/panduan.html
@@ -289,33 +289,33 @@
   const tutorials = {
     resetpin: {
       title: "Tutorial Reset PIN",
-      img: "https://via.placeholder.com/350x200?text=Reset+PIN",
-      text: "Buka menu Akun → Pengaturan → PIN Transaksi → Reset PIN. Masukkan PIN baru dan konfirmasi untuk mengaktifkan akun Anda kembali."
+      img: "https://github.com/rochimups2/migrasi-fastronik/blob/main/resetpin.jpg",
+      text: "Buka menu Akun → Pengaturan → PIN Transaksi → Reset PIN. Masukkan Nomor HP dan konfirmasi untuk mengaktifkan akun Anda kembali."
     },
     ubahpin: {
       title: "Cara Ubah PIN",
-      img: "https://via.placeholder.com/350x200?text=Ubah+PIN",
-      text: "Masuk ke menu Pengaturan → Ubah PIN → Masukkan PIN lama dan baru Anda untuk keamanan tambahan."
+      img: "https://github.com/rochimups2/migrasi-fastronik/blob/main/ubah_pin.jpg",
+      text: "Masuk ke menu Pengaturan → PIN Transaksi → Ubah PIN → Masukkan PIN lama dan baru Anda untuk keamanan tambahan."
     },
     kirimstok: {
       title: "Cara Kirim Stok / Saldo",
-      img: "https://via.placeholder.com/350x200?text=Kirim+Saldo",
-      text: "Masuk menu Kirim Saldo → Masukkan nomor tujuan dan nominal → Konfirmasi transaksi dengan PIN Anda."
+      img: "https://github.com/rochimups2/migrasi-fastronik/blob/main/tfstok.jpg",
+      text: "Masuk menu Downline → Plih Lihat Downline → Cari berdasarkan nomor hp atau kode agen → Pilih Agen → Masukkan Nominal → Konfirmasi transaksi dengan PIN Anda."
     },
     bank: {
       title: "Deposit via Transfer Bank",
-      img: "https://via.placeholder.com/350x200?text=Deposit+Bank",
-      text: "Pilih menu Deposit → Transfer Bank → Pilih bank tujuan → Lakukan transfer sesuai nominal yang tertera."
+      img: "https://github.com/rochimups2/migrasi-fastronik/blob/main/tfbank.jpg",
+      text: "Pilih menu Isi Ulang → Pilih Metode Transfer Bank → Masukan Nominal → Konfirmasi transaksi dengan PIN Anda → Lakukan transfer sesuai nominal yang tertera "
     },
     qris: {
       title: "Deposit via QRIS",
-      img: "https://via.placeholder.com/350x200?text=Deposit+QRIS",
-      text: "Masuk menu Deposit → Pilih QRIS → Scan kode QR menggunakan aplikasi keuangan Anda → Saldo otomatis masuk."
+      img: "https://github.com/rochimups2/migrasi-fastronik/blob/main/qris.jpg",
+      text: "Pilih menu Isi Ulang → Pilih QRIS → Masukan Nominal → Konfirmasi transaksi dengan PIN Anda → Scan kode QR menggunakan aplikasi keuangan Anda → Saldo otomatis masuk."
     },
     alfamart: {
       title: "Deposit via Alfamart",
-      img: "https://via.placeholder.com/350x200?text=Deposit+Alfamart",
-      text: "Datang ke kasir Alfamart → Sebutkan ingin deposit Fastronic → Tunjukkan kode pelanggan Anda → Selesai."
+      img: "https://github.com/rochimups2/migrasi-fastronik/blob/main/alfamart.jpg",
+      text: "Pilih menu Isi Ulang → Pilih Metode Transfer Bank → Masukan Nominal → Konfirmasi transaksi dengan PIN Anda → Lakukan pembayaran melalui Alfamart"
     }
   };
 
