--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <div class="download-section">
       <p>📲 Unduh Aplikasi Baru</p>
       <div class="store-buttons">
-        <a href="https://play.google.com/store" target="_blank">
+        <a href="https://bit.ly/fastronic" target="_blank">
           <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Download di Play Store">
         </a>
       </div>
